# xersize-rust-git2

./: Cargo.toml  Dockerfile
src/: main.rs
src/rest/: data.rs  json.rs  mod.rs  repository.rs
src/stupiddb/: error.rs  info.rs  mod.rs  models.rs  regex.rs  repository.rs
