[package]
name = "stupid-db"
version = "0.1.0"
authors = ["Khairi Husseini <kmhusseini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
git2 = "0.13.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = {version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
structopt = "0.3"
regex = "1"
confy = "0.4"
validator = "0.10"
validator_derive = "0.10"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
